Closed Bug 1545200 Opened 5 years ago Closed 5 years ago

Squelch spurious synchronous operation warnings in `Connection::operationSupported`

Categories

(Toolkit :: Storage, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: lina, Assigned: lina)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

From Mak on IRC:

I'm running toolkit/components/places/tests/unifiedcomplete/test_tab_matches.js
lina I also see quite some WARNING: 'aOperationType == SYNCHRONOUS && mSupportedOperations == ASYNCHRONOUS && NS_IsMainThread())
(don't have a stack atm)

This comes from Connection::Interrupt, which checks if the connection is synchronous. In this case, the warning is spurious—we want to check if it's sync, and throw if you try to interrupt it.

I think we should move the warning into ensureOperationSupported, and dump the JS stack while we're at it.

Pushed by kcambridge@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a3acb30248ff
Squelch spurious synchronous operation warnings in `Connection::operationSupported`. r=mak

Bugbug thinks this bug is a task, but please change it back in case of error.

Type: defect → task
Priority: -- → P1
Type: task → defect
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: