Bug 1545200 - Squelch spurious synchronous operation warnings in `Connection::operationSupported`. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D27959